# AGIFT-graph-builder

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TECHNICAL.md  __init__.py  docker-compose.yml  dockerhub-description.md  entrypoint.sh  import_agift.py  pyproject.toml  release.sh
.github/workflows/: ci.yml  publish.yml
agift/: __init__.py  __main__.py  backend.py  cli.py  cogdb_backend.py  common.py  embed.py  fetch.py  graph.py  link.py  neo4j_backend.py
dashboard/: Dockerfile  app.py
dashboard/templates/: index.html
tests/: conftest.py  test_cogdb_backend.py  test_common.py  test_docker.py  test_pipeline.py
worker/: Dockerfile  entrypoint.sh
